# polimorfizm-ptr-move

./: CMakeLists.txt  TODO.txt  build-and-run.sh  child-creators-register.cpp  code-format.sh  code-style.sh  code-style.txt  compile.sh  format.sh  main.cpp  nokia-cv.txt  polimorfizm-ptr-move.cpp  shared-object-prepare.sh
include/: child-creators-register.hpp  children.hpp  parent-creator.hpp  parent.hpp
src/: CChildSelector.cpp  CChildren.cpp  CConfigChild.cpp  CConfigSoChild.cpp  CCreatorSelector.cpp  CCreatorSelectorIf.cpp  CDemoSoChild.cpp  CDlGlobalHandle.cpp  CFramework.cpp  CFrameworkIf.cpp  CInput.cpp  CInputIf.cpp  CSelector.cpp  CSelectorConfigurator.cpp  CSelectorConfiguratorIf.cpp  CSelectorIf.cpp  CSimpleSelector.cpp  CSoChildCreator.cpp  CSoChildProductionClasses.cpp  CSoConfiguratorProducer.cpp  CWorkerConfigurator.cpp  child-creator.cpp  child-creators-register.cpp  child-creators-registering.cpp  child-creators.cpp  child-selector.cpp  children.cpp  example1.cpp  example2.cpp  framework.cpp  main.cpp  produce-child-creators.cpp  registering.cpp  selector-config.cpp
src/CChildren/: CChildren.cpp  CChildren.hpp
src/CConfigChild/: CConfigChild.cpp  CConfigChild.hpp
src/CConfigSoChild/: CConfigSoChild.cpp  CConfigSoChild.hpp
src/CDemoSoChild/: CDemoSoChild.cpp
src/CMap/: CMap.cpp  CMapIf.cpp
src/CMap/include/: CMap.hpp  CMapIf.hpp
src/CSelectorConfigurator/: CSelectorConfigurator.cpp  CSelectorConfigurator.hpp
src/SoChildCreatorsProcuction/: CSoChildCreatorsProducerChild.cpp  CSoChildWrapperAndCreator.cpp  createNewCSoChildCeator.hpp
src/SoChildCreatorsProduction/: CSoChildCreatorsProducerChild.cpp  CSoChildCreatorsProducerChild.hpp  CSoChildWrapperAndCreator.cpp  createNewCSoChildCeator.hpp  createNewCSoChildCreator.hpp  createNewCSoChildCreatorsProducerChildCreator.hpp
src/include/: CChildSelector.hpp  CChildren.hpp  CConfigChild.hpp  CCreatorSelector.hpp  CCreatorSelectorIf.hpp  CCreatorSelelectorIf.hpp  CDemoSoChild.cpp  CDlGlobalHandle.hpp  CFramework.hpp  CFrameworkIf.hpp  CInput.hpp  CInputIf.hpp  CParent.hpp  CSelector.hpp  CSelectorConfigurator.hpp  CSelectorConfiguratorIf.hpp  CSelectorIf.hpp  CSimpleSelector.hpp  CSoConfiguratorProducer.hpp  VOID.hpp  child-creator.hpp  child-creators-register.hpp  child-creators-registering.hpp  child-creators.hpp  child-selector.hpp  children.hpp  framework.hpp  parent-creator.hpp  parent.hpp  registering.hpp  selector-config.hpp  throw.hpp
src/include/CMap/: CMapIf.hpp
src/include/old/: CChildCreatorSimple.hpp  CChildSelector.hpp  CConfigSoChild.hpp  CInput.hpp  CSelectorConfigurator.hpp
src/old/: CChildCreatorSimple.cpp  CChildSelector.cpp  CCreatorSelectorIf.cpp  CFrameworkIf.cpp  CWorkerConfAddWorker.cpp
uts/: CMakeLists.txt  uts-build-and-run.sh
uts/src/: CFactoryUTs.cpp  CFrameworkUTs.cpp  CSelectorConfiguratorUTs.cpp  asc-ut.cpp  ut.cpp
uts/src/old/: CConfiguratorUTs.cpp
